# C-Template-Advent-Of-Code-

./: .gitignore  CMakeLists.txt  README.md  READ_ME.md  justfile
daily-template/part1/: CMakeLists.txt
daily-template/part2/: CMakeLists.txt
daily-template/part2/src/: main.cpp
day-1/part1/lib/: part1.cpp
day-1/part2/: CMakeLists.txt
day-1/part2/lib/: part2.cpp
day-2/part1/src/: part1.cpp
day-3/part1/: CMakeLists.txt
day-3/part1/include/: part1.h
day-3/part1/src/: main.cpp
day-3/part2/include/: part2.h
scripts/: CMakeLists.txt  run.sh  run2.sh
scripts/src/: parser.cpp
